feat(tag): some fixs + tag creation
