# back/routers/router.go
@@ -15,6 +15,7 @@ func SetupRouter(db *gorm.DB) *gin.Engine {
 	authHandler := handlers.NewAuthHandler(services.NewAuthService(db), services.NewUserService(db))
 	userHandler := handlers.UserHandler{UserService: services.NewUserService(db), FileService: services.NewFileService(db)}
 	tournamentHandler := handlers.NewTournamentHandler(services.NewTournamentService(db))
+	tagHandler := handlers.NewTagHandler(services.NewTagService(db))
 	gameHandler := handlers.NewGameHandler(services.NewGameService(db))
 	uploadFileHandler := handlers.NewUploadHandler(services.NewFileService(db))
 
@@ -50,6 +51,9 @@ func SetupRouter(db *gorm.DB) *gin.Engine {
 		protectedRoutes.POST("/matches/:id/finish", tournamentHandler.FinishMatch)
 
 		protectedRoutes.GET(("/games"), gameHandler.GetAllGames)
+
+		protectedRoutes.GET("/tags", tagHandler.GetAllTags)
+		protectedRoutes.POST("/tags", tagHandler.CreateTag)
 
 	}
 
